// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination /> should correctly handle clicks with mandatory props 1`] = `
<Pagination
  activePage={1}
  firstPageText="«"
  hideFirstLastPages={false}
  itemsCountPerPage={10}
  lastPageText="»"
  nextPageText="⟩"
  onChange={[MockFunction]}
  pageRangeDisplayed={5}
  prevPageText="⟨"
  totalItemsCount={10}
  verticalAlign={false}
>
  <styled__Wrapper
    verticalAlign={false}
  >
    <ul
      className="styled__Wrapper-dxl0zg-1 cggFIw"
    >
      <Page
        isActive={false}
        isDisabled={true}
        key="last"
        onClick={[MockFunction]}
        pageNumber={1}
        pageText="»"
      >
        <styled__PageWrapper
          isActive={false}
          onClick={[Function]}
        >
          <li
            className="styled__PageWrapper-dxl0zg-0 fOgClc"
            onClick={[Function]}
          >
            <span>
              »
            </span>
          </li>
        </styled__PageWrapper>
      </Page>
      <Page
        isActive={false}
        isDisabled={true}
        key="next2"
        onClick={[MockFunction]}
        pageNumber={2}
        pageText="⟩"
      >
        <styled__PageWrapper
          isActive={false}
          onClick={[Function]}
        >
          <li
            className="styled__PageWrapper-dxl0zg-0 fOgClc"
            onClick={[Function]}
          >
            <span>
              ⟩
            </span>
          </li>
        </styled__PageWrapper>
      </Page>
      <Page
        isActive={false}
        isDisabled={true}
        key="first"
        onClick={[MockFunction]}
        pageNumber={1}
        pageText="«"
      >
        <styled__PageWrapper
          isActive={false}
          onClick={[Function]}
        >
          <li
            className="styled__PageWrapper-dxl0zg-0 fOgClc"
            onClick={[Function]}
          >
            <span>
              «
            </span>
          </li>
        </styled__PageWrapper>
      </Page>
      <Page
        isActive={false}
        isDisabled={true}
        key="prev0"
        onClick={[MockFunction]}
        pageNumber={0}
        pageText="⟨"
      >
        <styled__PageWrapper
          isActive={false}
          onClick={[Function]}
        >
          <li
            className="styled__PageWrapper-dxl0zg-0 fOgClc"
            onClick={[Function]}
          >
            <span>
              ⟨
            </span>
          </li>
        </styled__PageWrapper>
      </Page>
      <Page
        isActive={true}
        isDisabled={false}
        key="1"
        onClick={[MockFunction]}
        pageNumber={1}
        pageText="1"
      >
        <styled__PageWrapper
          isActive={true}
          onClick={[Function]}
        >
          <li
            className="styled__PageWrapper-dxl0zg-0 gYkfmV"
            onClick={[Function]}
          >
            <span>
              1
            </span>
          </li>
        </styled__PageWrapper>
      </Page>
    </ul>
  </styled__Wrapper>
</Pagination>
`;

exports[`<Pagination /> should render correctly with optional params 1`] = `
<Pagination
  activePage={2}
  firstPageText="<<"
  hideDisabled={true}
  hideFirstLastPages={false}
  hideNavigation={false}
  itemsCountPerPage={5}
  lastPageText=">>"
  nextPageText="->"
  onChange={[MockFunction]}
  pageRangeDisplayed={5}
  prevPageText="<-"
  totalItemsCount={10}
  verticalAlign={true}
>
  <styled__Wrapper
    verticalAlign={true}
  >
    <ul
      className="styled__Wrapper-dxl0zg-1 dKYpTi"
    >
      <Page
        isActive={false}
        isDisabled={false}
        key="first"
        onClick={[MockFunction]}
        pageNumber={1}
        pageText="<<"
      >
        <styled__PageWrapper
          isActive={false}
          onClick={[Function]}
        >
          <li
            className="styled__PageWrapper-dxl0zg-0 fOgClc"
            onClick={[Function]}
          >
            <span>
              &lt;&lt;
            </span>
          </li>
        </styled__PageWrapper>
      </Page>
      <Page
        isActive={false}
        isDisabled={false}
        key="prev1"
        onClick={[MockFunction]}
        pageNumber={1}
        pageText="<-"
      >
        <styled__PageWrapper
          isActive={false}
          onClick={[Function]}
        >
          <li
            className="styled__PageWrapper-dxl0zg-0 fOgClc"
            onClick={[Function]}
          >
            <span>
              &lt;-
            </span>
          </li>
        </styled__PageWrapper>
      </Page>
      <Page
        isActive={false}
        isDisabled={false}
        key="1"
        onClick={[MockFunction]}
        pageNumber={1}
        pageText="1"
      >
        <styled__PageWrapper
          isActive={false}
          onClick={[Function]}
        >
          <li
            className="styled__PageWrapper-dxl0zg-0 fOgClc"
            onClick={[Function]}
          >
            <span>
              1
            </span>
          </li>
        </styled__PageWrapper>
      </Page>
      <Page
        isActive={true}
        isDisabled={false}
        key="2"
        onClick={[MockFunction]}
        pageNumber={2}
        pageText="2"
      >
        <styled__PageWrapper
          isActive={true}
          onClick={[Function]}
        >
          <li
            className="styled__PageWrapper-dxl0zg-0 gYkfmV"
            onClick={[Function]}
          >
            <span>
              2
            </span>
          </li>
        </styled__PageWrapper>
      </Page>
    </ul>
  </styled__Wrapper>
</Pagination>
`;
